# neurodash

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  new_run_cmd.sh  pyproject.toml  service_analysis.py
analysis_configs/: authoriser.toml  contrast_usage.toml  contrast_usage_ahmed.toml  test_config.toml
dashboard_assets/: dashboard_config.json  neuroNLP-dashboard-manual.md
src/neurodash/: clinical.py  inference.py  operational.py  service_analysis.py  utils.py
tests/: test_operational.py  test_utils.py
