[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neurodash"
dynamic = ["version"]
description = 'An interactive dashboard for operational analysis of radiological reports'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Henry Watkins", email = "h.watkins@ucl.ac.uk" },
]
classifiers = []
dependencies = [
  "streamlit",
  "matplotlib",
  "pandas",
  "tqdm",
  "srsly",
  "plotly",
  "msoffcrypto-tool",
  "reportlab",
  "seaborn",
  "spacy",
  "kaleido",
  "neurocluster", ## @ {home:uri}/Desktop/neurocluster/dist/neurocluster-0.0.1-py3-none-any.whl",
  "neurollm", ## @ {home:uri}/Desktop/neurollm/dist/neurollm-0.0.1-py3-none-any.whl",
  "neuradicon", ## @ {home:uri}/Desktop/neuradicon/dist/neuradicon-0.0.1-py3-none-any.whl",
]


[project.urls]

[tool.hatch.metadata]
allow-direct-references = true


[tool.hatch.version]
path = "src/neurodash/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "black",
  "isort",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
fmt = "black . ; isort ."
