[project]
name = "neurodash"
version = "0.1.0"
description = "An interactive dashboard for operational analysis of radiological reports"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
  "streamlit",
  "matplotlib",
  "pandas",
  "tqdm",
  "srsly",
  "plotly",
  "msoffcrypto-tool",
  "reportlab",
  "seaborn",
  "spacy",
]



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pytest>=8.3.5",
]
